Interface
Adicionada uma interface utilizando Swing